🪾 main => 🛠️ build check script java app